--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
-    "nativewind": "^2.0.11",
+    "font-family": "^0.2.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "expo-font": "~11.4.0",
     "react-native-vector-icons": "^10.0.0",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.3.3",
-    "twrnc": "^3.6.4",
-    "expo-font": "~11.4.0"
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
