--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "font-family": "^0.2.0",
+    "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
