--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-firebase/app": "^18.3.1",
+    "@react-native-firebase/auth": "^18.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -19,6 +21,7 @@
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "font-family": "^0.2.0",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
