--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-firebase/app": "^18.3.1",
     "@react-native-firebase/auth": "^18.3.2",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -23,9 +24,10 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "font-family": "^0.2.0",
-    "lottie-react-native": "^6.2.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-lottie": "^0.0.1-alpha.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
