--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.1.3",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-native-firebase/app": "^18.3.1",
     "@react-native-firebase/auth": "^18.3.2",
-    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
