--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
@@ -20,7 +21,8 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "font-family": "^0.2.0",
-    "lottie-react-native": "^6.2.0",
+    "i": "^0.3.7",
+    "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
