--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~49.0.8",
+    "expo": "^49.0.9",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
