--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-native-firebase/app": "^18.3.1",
     "@react-native-firebase/auth": "^18.3.2",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
