--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-lottie": "^0.0.1-alpha.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-toggle-element": "^2.0.1",
     "react-native-vector-icons": "^10.0.0",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.3.3",
