--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-image-picker": "^7.0.0",
     "react-native-lottie": "^0.0.1-alpha.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
