--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-toggle-element": "^2.0.1",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-vision-camera": "^3.2.2",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.3.3",
     "twrnc": "^3.6.4"
