--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-picker": "^7.0.0",
     "react-native-lottie": "^0.0.1-alpha.2",
+    "react-native-maps": "1.7.1",
+    "react-native-multi-selectbox": "^1.5.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-select-list": "^1.0.5",
     "react-native-toggle-element": "^2.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-vision-camera": "^3.2.2",
