--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-list": "^1.0.5",
+    "react-native-star-rating-widget": "^1.7.2",
     "react-native-svg": "^13.14.0",
     "react-native-toggle-element": "^2.0.1",
     "react-native-vector-icons": "^10.0.1",
