--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-image-picker": "^7.0.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-lottie": "^0.0.1-alpha.2",
     "react-native-maps": "1.7.1",
     "react-native-multi-selectbox": "^1.5.0",
